--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txt_email_login"
+        android:id="@+id/tl_email_login"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_input_email" />
@@ -51,7 +52,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txt_pass_login"
+        android:id="@+id/tl_pass_login"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,9 +62,10 @@
         app:endIconTint="@color/main_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_email_login">
+        app:layout_constraintTop_toBottomOf="@+id/tl_email_login">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_pass_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_input_pass"
@@ -86,7 +88,7 @@
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_pass_login" />
+        app:layout_constraintTop_toBottomOf="@+id/tl_pass_login" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ln_register"
