--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="gray_mind_70">#b3b3b3</color>
     <color name="gray_mind_30">#4d4d4d</color>
     <color name="gray_mind_40">#666666</color>
+    <color name="gray_maind_10">#3333331a</color>
     <color name="light_gray">#EDF4FB</color>
-    <color name="main_button">#52cbbc</color>
+    <color name="main_button">#38BED4</color>
+    <color name="whitesmoke">#edeeee</color>
+    <color name="light_gray_2">#cdcccb</color>
 </resources>
