--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="main_button">#38BED4</color>
     <color name="whitesmoke">#edeeee</color>
     <color name="light_gray_2">#cdcccb</color>
+    <color name="gainsboro">#dedfe0</color>
 </resources>
