--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,28 +168,18 @@
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
         <ImageButton
-            android:id="@+id/btnFacebookInterface"
-            android:layout_width="44dp"
+            android:id="@+id/btnLoginFace"
+            android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_facebook" />
-
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/btnLoginFacebook"
-            style="@style/FacebookLoginButton"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-            android:visibility="invisible" />
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="match_parent" />
 
         <ImageButton
-            android:id="@+id/btnLoginGoogleInterface"
+            android:id="@+id/btnLoginGoogle"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
