--- a/app/src/main/res/layout/activity_detail_tour.xml
+++ b/app/src/main/res/layout/activity_detail_tour.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.detail_tour.DetailTourActivity">
 
     <FrameLayout
@@ -123,7 +124,7 @@
     </FrameLayout>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-20dp"
@@ -133,6 +134,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lno_detail_tour">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/mc_custom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="16dp"
@@ -152,11 +154,13 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/vpg_detail_tour"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/mc_custom"
             android:paddingStart="16dp"
             android:paddingTop="26dp"
-            android:paddingEnd="16dp" />
+            android:paddingEnd="16dp"
+            android:paddingBottom="20dp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
