--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,8 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="100dp"
-    android:orientation="vertical">
+    android:layout_marginTop="36dp"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingTop="36dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="100dp">
 
     <ScrollView
         android:layout_width="match_parent"
