--- a/app/src/main/res/layout/fragment_overview_detail_tour.xml
+++ b/app/src/main/res/layout/fragment_overview_detail_tour.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_overview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/fragment_overview"
     tools:context=".OverviewDetailTourFragment">
 
     <TextView
@@ -109,5 +109,33 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/btn_add_order"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/cart_nav"
+            app:backgroundTint="@null" />
+
+        <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/btn_buy_now"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/btn_custom_1"
+            android:text="Mua ngay"
+            android:textColor="@color/white"
+            app:backgroundTint="@null" />
+
+    </LinearLayout>
 
 </LinearLayout>
