--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,8 @@
             android:id="@+id/txt_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login_input_email" />
+            android:hint="@string/login_input_email"
+            android:textColor="@color/gray_mind" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_input_pass"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textColor="@color/gray_mind" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
