--- a/app/src/main/res/layout/fragment_overview_detail_tour.xml
+++ b/app/src/main/res/layout/fragment_overview_detail_tour.xml
@@ -126,7 +126,7 @@
             android:src="@drawable/cart_nav"
             app:backgroundTint="@null" />
 
-        <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+        <Button
             android:id="@+id/btn_buy_now"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
