--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -57,7 +57,8 @@
                     android:id="@+id/txt_user_name_register"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Nhập tên người dùng" />
+                    android:hint="Nhập tên người dùng"
+                    android:textColor="@color/gray_mind" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +78,8 @@
                     android:id="@+id/txt_email_register"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/login_input_email" />
+                    android:hint="@string/login_input_email"
+                    android:textColor="@color/gray_mind" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,7 +101,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nhập mật khẩu"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:textColor="@color/gray_mind" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -121,7 +124,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/login_input_pass"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:textColor="@color/gray_mind" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
