--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -42,6 +42,7 @@
                         app:civ_border_color="@color/gray_mind" />
 
                     <TextView
+                        android:id="@+id/tv_name_account_fragment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nguyễn Thành Thiện"
@@ -150,7 +151,6 @@
                 android:layout_toLeftOf="@id/tvText"
                 android:background="@color/gray_mind_70" />
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -183,6 +183,28 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
+                android:layout_toLeftOf="@id/tvText"
+                android:background="@color/gray_mind_70" />
+
+            <Button xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/btn_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/btn_custom_2"
+                android:text="Đăng xuất"
+                android:textColor="@color/white"
+                app:backgroundTint="@null" />
 
         </LinearLayout>
     </ScrollView>
