--- a/app/src/main/res/layout/item_tour.xml
+++ b/app/src/main/res/layout/item_tour.xml
@@ -42,6 +42,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
+<!--                <TextView-->
+<!--                    android:id="@+id/test_data_hihi"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="cjhao ban" />-->
+
                 <TextView
                     android:id="@+id/tv_name_tour"
                     android:layout_width="match_parent"
