--- a/app/src/main/res/layout/item_tour_booking.xml
+++ b/app/src/main/res/layout/item_tour_booking.xml
@@ -16,6 +16,7 @@
         android:textSize="16dp" />
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/lo_item_booking_tour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
