--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lc_fragment_order"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,7 +41,16 @@
                     android:layout_height="match_parent"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp" />
+
             </androidx.core.widget.NestedScrollView>
+
+            <TextView
+                android:id="@+id/tv_not_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="Bạn chưa đăng nhập"
+                android:textSize="16dp" />
 
         </LinearLayout>
     </ScrollView>
