--- a/app/src/main/res/layout/activity_information_account.xml
+++ b/app/src/main/res/layout/activity_information_account.xml
@@ -37,8 +37,7 @@
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/img_avater_account"
                     android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:src="@drawable/luffy_5" />
+                    android:layout_height="120dp" />
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
