--- a/app/src/main/res/layout/category_home.xml
+++ b/app/src/main/res/layout/category_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lo_item_category"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
@@ -17,9 +18,9 @@
         android:id="@+id/tv_name_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="name test"
         android:textAlignment="center"
-        android:layout_marginTop="8dp"
         android:textColor="@color/gray_mind_30"
         android:textSize="16dp" />
 
