--- a/app/src/main/res/layout/fragment_overview_detail_tour.xml
+++ b/app/src/main/res/layout/fragment_overview_detail_tour.xml
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto_bold"
-            android:text="Date: "
+            android:text="Thời gian: "
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto_bold"
-            android:text="Minimum age: "
+            android:text="Giới hạn tuổi: "
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,23 +116,23 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageButton xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/btn_add_order"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginRight="10dp"
-            android:background="@android:color/transparent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/cart_nav"
-            app:backgroundTint="@null" />
+        <!--        <ImageButton xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--            android:id="@+id/btn_add_order"-->
+        <!--            android:layout_width="36dp"-->
+        <!--            android:layout_height="36dp"-->
+        <!--            android:layout_marginRight="10dp"-->
+        <!--            android:background="@android:color/transparent"-->
+        <!--            android:scaleType="centerCrop"-->
+        <!--            android:src="@drawable/cart_nav"-->
+        <!--            app:backgroundTint="@null" />-->
 
         <Button
-            android:id="@+id/btn_buy_now"
+            android:id="@+id/btn_add_order"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/btn_custom_1"
-            android:text="Mua ngay"
+            android:text="Thêm vào giỏ"
             android:textColor="@color/white"
             app:backgroundTint="@null" />
 
