--- a/app/src/main/res/layout/activity_chat_with_user_detail.xml
+++ b/app/src/main/res/layout/activity_chat_with_user_detail.xml
@@ -56,7 +56,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_chat"
+        android:id="@+id/rcv_chat_user"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/lo_send_chat"
@@ -75,16 +75,16 @@
         android:paddingBottom="20dp">
 
         <EditText
-            android:id="@+id/txt_content_chat"
+            android:id="@+id/txt_content_chat_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/btn_send_chat"
+            android:layout_toLeftOf="@+id/btn_send_chat_user"
             android:hint="Nhập tin nhắn"
             android:textColor="@color/gray_mind"
             android:textColorHint="@color/gray_mind_70" />
 
         <ImageButton
-            android:id="@+id/btn_send_chat"
+            android:id="@+id/btn_send_chat_user"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
