--- a/app/src/main/res/layout/activity_seen_location.xml
+++ b/app/src/main/res/layout/activity_seen_location.xml
@@ -22,18 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_bold"
-            android:text="Thành Công !"
+            android:text="Địa chỉ của chúng tôi"
             android:textSize="30dp"
             android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center_horizontal"
-            android:text="Cảm ơn bạn đã lựa chọn và sử dụng dịch vụ của chúng tôi. Hãy đến với cơ sở du lịch gần bạn nhất để thanh toán"
-            android:textSize="16dp" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,12 +76,12 @@
         </LinearLayout>
 
         <Button xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/btn_back_to_home"
+            android:id="@+id/btn_back_to_home_seen_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/btn_custom_2"
-            android:text="Quay lại trang chủ"
+            android:text="Quay lại"
             android:textColor="@color/white"
             app:backgroundTint="@null" />
 
