--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,6 +85,7 @@
             </androidx.core.widget.NestedScrollView>
 
             <Button
+                android:id="@+id/btn_seen_all_tour"
                 style="@style/btnCustom1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
