--- a/app/src/main/res/layout/item_tour_admin.xml
+++ b/app/src/main/res/layout/item_tour_admin.xml
@@ -6,15 +6,6 @@
     android:layout_marginTop="14dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_time_current_booking_tour"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/font_roboto_bold"
-        android:text="chao ban nha"
-        android:textColor="@color/gray_mind_30"
-        android:textSize="16dp" />
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/lo_item_booking_tour"
         android:layout_width="match_parent"
@@ -31,7 +22,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/img_booking_tour"
+                android:id="@+id/img_admin_tour"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -47,7 +38,7 @@
                 android:padding="12dp">
 
                 <TextView
-                    android:id="@+id/tv_name_booking_tour"
+                    android:id="@+id/tv_name_admin_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_bold"
@@ -57,9 +48,10 @@
                     android:textSize="16dp" />
 
                 <TextView
-                    android:id="@+id/tv_date_booking_tour"
+                    android:id="@+id/tv_descripton_admin_tour"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="chao ba"
                     android:textColor="@color/gray_mind_70" />
 
@@ -69,7 +61,7 @@
                     android:layout_marginTop="10dp">
 
                     <TextView
-                        android:id="@+id/tv_price_booking_tour"
+                        android:id="@+id/tv_price_admin_tour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_corner_1"
@@ -86,12 +78,12 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageButton
-                        android:id="@+id/btn_remove_booking"
+                        android:id="@+id/btn_popup_menu_admin_tour"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
                         android:background="@android:color/transparent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_delete_new"
+                        android:src="@drawable/dots"
                         app:backgroundTint="@null"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
