--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,9 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/edt_search"
                 android:hint="Bạn muốn đi đâu?"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:maxLines="1"
                 android:minHeight="48dp"
                 android:padding="12dp"
                 android:textColor="@color/gray_mind"
