--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_input_email"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLines="1"
             android:textColor="@color/gray_mind" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -70,7 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_input_pass"
-            android:inputType="textPassword"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
             android:textColor="@color/gray_mind" />
 
     </com.google.android.material.textfield.TextInputLayout>
